[project]
name = "adl-waypoint-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "peft>=0.17.1",
    "scikit-image>=0.25.2",
    "timm>=1.0.19",
    "tomli-w>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "ujson>=5.11.0",
]
